--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
 /app/*.bak
+/app/.vs/kmeanspp/v15
+/app/*.vcxproj
+/app/*.filters
+/app/CMakeCache.txt
+/app/CMakeFiles/3.24.2
+/app/CMakeFiles/4e906cebc7d3c2412d60f19244170692
+/app/CMakeFiles
+/app/Debug
+/app/Release
+/app/*.sln
+/app/cmake_install.cmake
+/app/kmeanspp.dir/Debug
+/app/kmeanspp.dir/Release
+/app/kmeanspp.exe
+/app/*.user
+/app/x64/Debug/ZERO_CHECK
+/app/x64/Release/ZERO_CHECK
